minor fixes to spacing

--- a/www/style.css
+++ b/www/style.css
@@ -275,7 +275,6 @@ p.warning:hover {
   display:inline;
 }
 
-#simButton,
 #matchingButton,
 #allButton,
 #nsims {
